[package]
name = "tcpman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0"
clap = { version = "4", features = ["derive"] }
dotenvy = "0"
env_logger = "0"
log = "0"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "macros", "signal"] }
bytes = "1"
anyhow = "1"
smallvec = "1"
num_enum = "0"
async-shutdown = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"